kubernetes/apps/networking/cilium/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: cilium
  namespace: kube-system
spec:
  controllerName: io.cilium/gateway-controller
